# SintraPrime-Unified

./: .bandit-baseline.json  .env.example  .gitattributes  .gitignore  .safety-policy.yml  .tmp_commit_msg_bra_completion.txt  AGENTS.md  CAPABILITY_MATRIX.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ECC_MVP_SUMMARY.txt  FIX_TEMPLATES_AGENT_TOOL_GATEWAY_WIRING.md  LAUNCH_HOWARD_RECOVERY_SYSTEM.vbs  LICENSE  MASTER_BUILD_PLAN.py  MASTER_STATUS.md  MERGE_RECEIPT_PR_155.md  Makefile  P0B_LEGACY_DOCS_SCRUB_RECEIPT.md  P0_ACTIVE_SURFACE_SCRUB_RECEIPT.md  PHASE_10_COMPLETE.md  PHASE_11_14_COMPLETE.md  PHASE_11_14_INTEGRATION_ORCHESTRATOR.py  PHASE_1_CLOSURE_REPORT.md  PHASE_20A_REPORT.md  PHASE_20B_INDEX.md  PHASE_20B_RECOMMENDATIONS.md  PHASE_20B_REPORT.md  PHASE_20B_SUMMARY.md  PHASE_20_PRODUCTION_MATURITY.md  PHASE_26_WINDOWS_QUICKSTART.md  PHASE_28A_RECEIPT.md  PHASE_28B_RECEIPT.md  PHASE_28C_RECEIPT.md  PHASE_28D_RECEIPT.md  QUICK_REFERENCE.md  README.md  SETUP_WINDOWS.ps1  SINTRAPRIME_UNIFIED_ARCHITECTURE.md  (+35 more)
.github/: PULL_REQUEST_TEMPLATE.md
.mesh/: AGENTS.md  AGENT_MESH_REGISTRY.md
academy/: MANIFEST.json  README.md
agent_protocol/: AGENT_NETWORK.md  __init__.py  agent_discovery.py  agent_node.py  message_bus.py  message_types.py  shared_memory.py  swarm_orchestrator.py
agents/: AGENTS.md  agent_registry.json  howard_intake_agent.py  howard_recovery_agent.py  howard_template_agent.py
ai_compliance/: AI_COMPLIANCE.md  __init__.py  ai_law_db.py  bias_detector.py  compliance_api.py  compliance_checker.py  compliance_reporter.py  ethics_framework.py
app_builder/: APP_BUILDER.md  __init__.py  app_builder.py  app_types.py  builder_api.py  database_builder.py  digital_twin.py  site_generator.py  stripe_integrator.py  template_library.py
apps/: __init__.py
artifacts/: PR-0006A-SUMMARY.txt  __init__.py  credit_report_analyzer.py  document_renderer.py  ecc-coverage.json  ecc-final-gate-report.txt  ecc-mvp-receipt.txt  ecc-mvp-smoke-receipt.txt  ecc-mvp-verification-receipt.txt  financial_report_templates.py  last_smoke_receipt_ref.txt  legal_document_library.py
automations/: cadence_registry.json
benchmarks/: BENCHMARKS.md  benchmark_suite.py
blackstone/: __init__.py  models.py
channels/: CHANNELS.md  __init__.py  channel_api.py  channel_hub.py  discord_channel.py  message_router.py  message_types.py  slack_channel.py  telegram_channel.py  webhook_channel.py  whatsapp_channel.py
claude_code/: CLAUDE_CODE.md  __init__.py  code_generator.py  engine.py  legal_code_assistant.py
config/: academy_registry.json
core/: Dockerfile  docker-entrypoint.py  requirements.txt
cross_platform/: CROSS_PLATFORM.md  __init__.py  api_gateway.py  conftest.py  mobile_tui.py  platform_detector.py  push_notifications.py
developer_experience/: DEVELOPER_EXPERIENCE.md  __init__.py  cookbook.py  dev_portal_api.py  model_playground.py  openapi_spec.py  sdk_generator.py
docket/: BUILD_SUMMARY.md  __init__.py  alert_system.py  courtlistener_client.py  deadline_tracker.py  docket_api.py  docket_monitor.py  pacer_client.py  scotus_tracker.py  state_courts.py
docs/: AIOS_ROUTING_TREE.md  ARCHITECTURE.md  CAPABILITY_INDEX.md  CLAIMS.md  DATABASE_AUTHORITY.md  DEPLOYMENT.md  FEATURES.md  IKE_HERMES_OPERATING_MANUAL.md  PHASE_26PLUS_DEMO_SCENARIO.md  PHASE_26PLUS_DEMO_SCRIPT.md  PHASE_26PLUS_PITCH_DECK.md  PHASE_26PLUS_ROI_CALCULATOR.md  PHASE_28_AUTONOMOUS_AGENT_ARCHITECTURE.md  PHASE_28_MODULE_MAP.txt  PR-0006A-COMPLETE.md  PR-0006A-event-stream-feasibility.md  PR-0006B-COMPLETE.md  PR-0006B-REMEDIATION-COMPLETE.md  PR-0006B-VERIFICATION-REPORT.md  PR-0006B-VERIFICATION-SUMMARY.md  PR-0006B-implementation-plan.md  PR-0006B-phase1-completion.md  PR-0006B-phase2-completion.md  QUICK_START.md  REPOSITORY_AUDIT_FINAL_REPORT.md  REPOSITORY_STATUS.md  SECURITY.md  integration_guide_v2.md  llm-reliability-audit.md  persistence-recoverability-audit.md  repo-verification-report.md
emotional_intelligence/: EMOTIONAL_INTELLIGENCE.md  __init__.py  client_relationship_manager.py  communication_style_adapter.py  crisis_detector.py  emotional_intelligence_api.py  empathy_engine.py  response_formatter.py  sentiment_analyzer.py
esignature/: __init__.py  docusign_client.py  esignature_api.py  legal_signer.py  signature_vault.py
evidence/: case_template.py  stress_test.py  stress_test_results.json
federal_agencies/: __init__.py  agency_api.py  cfpb_ftc_navigator.py  doj_navigator.py  irs_navigator.py  sec_navigator.py
financial_mastery/: __init__.py  accounting_intelligence.py  banking_intelligence.py  business_funding_engine.py  credit_mastery.py  debt_elimination_engine.py  financial_report_generator.py  investment_advisor.py
governance/: GOVERNANCE.md  __init__.py  approval_gate.py  audit_trail.py  compliance_monitor.py  governance_api.py  governance_engine.py  intervention_controller.py  risk_assessor.py  risk_types.py
intake_templates/: AGENTS.md  README_HOW_TO_USE_TEMPLATES.txt  aff_finwise_evidence_template.json  batch_evidence_template.json  chase_wells_ews_evidence_template.json  expungement_evidence_template.json  first_premier_evidence_template.json  funding_grants_evidence_template.json  generic_evidence_template.json  halsted_lvnv_evidence_template.json  merrick_bank_evidence_template.json  paypal_evidence_template.json  sap_fmcsa_evidence_template.json  self_leadbank_evidence_template.json  uacc_vroom_evidence_template.json  verizon_evidence_template.json
ledger/: README.md  record_ledger_entry.py  verify_ledger.py
legal_integrations/: LEGAL_INTEGRATIONS.md  __init__.py  court_efiling.py  dms_connectors.py  financial_connectors.py  integrations_api.py  legal_research.py
legal_intelligence/: __init__.py  civil_rights_engine.py  contract_intelligence.py  court_navigator.py  credit_dispute_engine.py  criminal_defense_engine.py  government_navigation.py  immigration_engine.py  legal_research_engine.py  motion_drafting_engine.py  practice_areas.py
life_governance/: __init__.py  asset_protection_system.py  entity_formation.py  estate_planning_engine.py  life_command_center.py  (+2 more)
(+1808 files in other folders)
