[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sintraprime-unified"
version = "0.1.0"
description = "SintraPrime Unified SSO $Security + Admin Dashboard"
requires-python = ">=3.10"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "DTZ"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["portal/tests"]
