[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sintraprime-unified"
version = "0.25.0"
description = "SintraPrime Unified: Multi-Agent AI Platform"
requires-python = ">=3.11"
authors = [
    {name = "Isiah Howard", email = "ihoward40@github.com"}
]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "aioredis>=2.0.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "stripe>=7.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "websockets>=12.0",
    "pytz>=2023.3",
    "tzlocal>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "isort>=5.13.2",
    "mypy>=1.7.1",
    "pytest-mock>=3.12.0",
    "responses>=0.24.1",
    "bandit>=1.7.5",
]

[tool.poetry]
packages = [
    {include = "portal"},
    {include = "ops"},
    {include = "packages"}
]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["portal", "ops", "packages"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
# Enable plugins
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "DTZ",   # flake8-datetimez
    "PT",    # flake8-pytest-style
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "E701",   # multiple-statements-on-one-line-colon
    "E702",   # multiple-statements-on-one-line-semicolon
    "E722",   # bare-except
    "SIM102", # nested-if-statements
    "DTZ011", # datetime.today() (noqa per file)
]
[tool.ruff.lint.isort]
known-first-party = ["portal", "operator"]

[tool.pytest.ini_options]
testpaths = ["portal/tests", "packages/tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["portal", "packages"]
branch = true
